# ai-holodeck

./: .envtemplate  .gitignore  README.md  bfr.py  block_imp.py  docker-compose.yml  local_llm_chooser.py  main.py  main2.py  ollama.docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  setup.sh  weaviate.docker-compose.yml
.devcontainer/: devcontainer.json
docs/: groundtruths.json  scratch.md
holodeck/chunking/: llmsherpa.py  summary_text.py  unstructured.py
holodeck/gradio/: chatbot.py
holodeck/ollama/: class.py  embeddings.py  ollama_client.py  ollama_utils.py
holodeck/phb_rag/: client.py  ollama_utils.py  pdf.py  pipeline.py  weaviate_utils.py
holodeck/rag/: chunking.py  ollama_utils.py  pdf.py  pipeline.py  pipeline2.py  weaviate_utils.py
holodeck/utilities/: constants.py  custom_logging.py
holodeck/weaviate/: weaviate_utils.py
notebooks/: PDF_strat.ipynb  clean_slate.ipynb  mistral.ipynb  new_pipeline.ipynb  rag.ipynb  ragas.ipynb  ragas_test.ipynb  result.xlsx  test_ui.ipynb  weaviate_example.ipynb
phb_rag/: client.py  constants.py
