[tool.poetry]
name = "ai-holodeck"
version = "0.1.0"
description = ""
authors = ["Charlie Rogers"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
gradio = "^4.27.0"
ollama = "^0.1.8"
loguru = "^0.7.2"
sentence-transformers = "^2.7.0"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
tqdm = "^4.66.2"
unstructured = {extras = ["local-inference"], version = "^0.13.3"}
weaviate-client = "^4.5.5"
opencv-python-headless = "^4.9.0"
llama-index = "^0.10.30"
llama-index-embeddings-ollama = "^0.1.2"
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"

[tool.poetry.scripts]
ai-holodeck = 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
